# HiGraph-CPG

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.streamlit  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: __init__.py  config.py  main.py
api/models/: __init__.py  answer.py  query.py  search.py
api/routers/: __init__.py  answer.py  query.py  search.py
api/services/: __init__.py  answer_generator.py  embedding_service.py  fusion.py  graph_templates.py  neo4j_service.py  query_router.py  reranker.py
configs/guidelines/: diabetes-t2-2023.yaml
data/output-samples/: query1.md
docs/: EXECUTIVE_SUMMARY.md  deployment.md  query-strategy.md  vector-search.md
docs/technical/: EMBEDDING_STRATEGY.md  SCHEMA.md  (+5 more)
schema/: constraints.cypher  constraints_v2.cypher  fulltext_indexes_v2.cypher  indexes.cypher  indexes_v2.cypher  init_schema_v2.cypher  node_types.json  relationship_types.json  vector_indexes.cypher  vector_indexes_v2.cypher
scripts/: README.md  backup_database.py  example_traversals.cypher  init_schema.py  init_schema_v2.py  restore_database.py  run_traversals.py  seed_test_data.cypher  test_real_vector_search.py  test_vector_search.py
streamlit_app/: app.py  requirements.txt
tasks/: extraction-strategy.md  human-review-guide.md  manual-extraction-strategy.md  prd-demo-deployment.md  prd-higraph-cpg-data-ingestion.md  prd-higraph-cpg-foundation.md  prd-query-api-part2.md  prd-query-api.md  project-overview.md  query-strategy.md
tests/: test_api_search.py  test_traversals.py
utils/: embeddings.py
(+64 files in other folders)
